kubernetes/clusters/home/infrastructure/security/policy-reporter/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-forward-auth
  namespace: kyverno
spec:
  forwardAuth:
    address: http://authentik-server.authentik.svc.cluster.local:80/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: policy-reporter
  namespace: kyverno
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Policy Reporter
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: kyverno.png
    gethomepage.dev/href: https://policy-reporter.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=policy-reporter-ui
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`policy-reporter.syslabs.dev`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
      services:
        - name: policy-reporter-ui
          port: 8080
  tls: {}
